hphp/test/quick/reserved_class1.php.expectf
Fatal error: Cannot use `bool` as a type name as it is reserved in %s on line 3
